src/test/deca/context/valid/ContextAvecObjet/DeclMeth/declMethodNoArg.deca
// Description:
//    Déclaration d'une méthode sans argument
//
// Resultats:
//    ok
//
class A{

    boolean isClass(){
        return true;
    }
}
